--- a/FE/src/components/FormikSignUp/FormikSignUp.module.css
+++ b/FE/src/components/FormikSignUp/FormikSignUp.module.css
@@ -49,6 +49,8 @@
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
     position: absolute;
     width: 70%;
     top: 50%;
@@ -56,8 +58,9 @@
 }
 
 .gender {
-    text-align: center;
-    color: var(--white);
+    text-align: left;
+    margin-bottom: 4px;
+     color: #b9bbbe;
 }
 
 .input {
