--- a/FE/src/components/nav/nav.module.css
+++ b/FE/src/components/nav/nav.module.css
@@ -33,7 +33,7 @@
     display: inline-block;
     padding-left: 2rem;
     transition: .3s ease-in;
-
+    cursor: pointer;
 }
 
 .menu-nav__link {
@@ -54,15 +54,6 @@
     transition: .3s ease-in;
 }
 
-/* .menu-nav__item:last-child .menu-nav__link {
-    background-color: var(--secondBlack);
-    padding: 14px 29px;
-    color: var(--white);
-    border-radius: 23px;
-} */
-
-
-
 .user-avatar {
     position: absolute;
     right: 45px;
@@ -71,18 +62,8 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    cursor: pointer;
 }
-/* .menu-nav__link:hover::before {
-    width: 100%;
-    height: 3px;
-}
-
-.menu-nav__link:hover {
-    color: var(--primary);
-    font-size: 25px;
-}
- */
-
 
  .wrapper {
     position: relative;
