--- a/FE/src/components/RadioFormik/RadioFormik.module.css
+++ b/FE/src/components/RadioFormik/RadioFormik.module.css
@@ -5,11 +5,43 @@
 
 .add_type {
     display: flex;
+    align-items: center;
     cursor: pointer;
     background-color:  #EFF0F2;
     border-radius: 6px;
-    overflow: hidden;
-    align-items: center;
+    width: 280px;
+    height: 100px;
+}
+
+.input-container {
+    position: relative;
+    width: 100px;
+    height: 100%;
+}
+
+.radio {
+    width: 100px;
+    height: 100%;
+    appearance: none;
+    background: #6b6c6e;
+    aspect-ratio: 1;
+}
+
+
+
+.customclass {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #ADE792;
+    opacity: 0;
+}
+/* 
+.radio:checked  .customclass {
+    opacity: 1;
+} */
+.radio:checked ~ .customclass {
+    opacity: 1;  
 }
 
 .name_type {
@@ -19,16 +51,3 @@
     margin-left: 28px;
 }
 
-.radio {
-    box-sizing: border-box;
-    appearance: none;
-    background: #6b6c6e;
-    outline: 2px none #333;
-    width: calc(100% / 2.8);
-    aspect-ratio: 1;
-}
-
-.radio:checked {
-    background:  #C2C6CC;
-    
-}
