--- a/FE/src/components/banner/banner.module.css
+++ b/FE/src/components/banner/banner.module.css
@@ -3,7 +3,7 @@
 .banner-wrapper {
     text-align: center;
     height: 450px;
-    margin:  0  100px;
+    margin:  20px  100px;
 
     background-size: cover;
     background-position: top;
