--- a/FE/src/pages/customer/Search/Search.module.css
+++ b/FE/src/pages/customer/Search/Search.module.css
@@ -1,6 +1,6 @@
 .search-wrapper {
     display: flex;
-    margin: 50px 100px 0 100px;
+    margin: 50px 50px 0 50px;
     gap: 40px;
 }
 
@@ -12,49 +12,17 @@
     align-items: center;
 }
 
-.special {
-    color: var(--black);
-}
-
-.colright {
-    position: relative;
-    width: 100%;
-    height: 400px;
-}
-
-.square {
-    height: 160px;
-    width: 160px;
-    background-color: #e0e2e6;
-}
-
-.map-center__info {
-    display: flex;
-    width: 80%;
-    position: absolute;
-    top: 423px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
-}
 .search-result {
     margin-bottom: 15px;
-    font-size: 18px;
+    font-size: 24px;
     font-weight: 700;
-
+    margin-left: 20px;
 }
 
-.box-shadow {
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-}
-
-.map {
-    height: 100%;
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     width: 100%;
-}
-
-.show-map {
-    position: absolute;
-    bottom: 30px;
-    right: 50px;
+    margin-bottom: 24px;
 }
