--- a/FE/src/components/CardList/CardList.module.css
+++ b/FE/src/components/CardList/CardList.module.css
@@ -6,9 +6,9 @@
     margin-bottom: 40px;
 }
 
-.card-descrition {
+.card-description {
     position: relative;
-    font-size: 37px;
+    font-size: 30px;
     font-weight: 700;
 }
 
