--- a/FE/src/components/FormikSignUp/FormikSignUp.module.css
+++ b/FE/src/components/FormikSignUp/FormikSignUp.module.css
@@ -14,6 +14,7 @@
 .sign-up__form {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 21px;
     padding: 40px;
     width: 100%;
