--- a/FE/src/components/FormikSignUp/FormikSignUp.module.css
+++ b/FE/src/components/FormikSignUp/FormikSignUp.module.css
@@ -14,8 +14,7 @@
 .sign-up__form {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    gap: 21px;
+    justify-content: space-around;
     padding: 40px;
     width: 100%;
     align-items: center;
