--- a/FE/src/pages/HostSite/HostPage/HostPage.module.css
+++ b/FE/src/pages/HostSite/HostPage/HostPage.module.css
@@ -67,3 +67,10 @@
 .custom-card {
     height: 100%;
 }
+
+.second {
+    position: relative;
+    margin-bottom: 30px;
+    width: 100%;
+    height:100%;
+}
