--- a/FE/src/components/CardList/CardList.module.css
+++ b/FE/src/components/CardList/CardList.module.css
@@ -27,7 +27,7 @@
     display: flex;
     gap: 15px;
     flex-wrap: wrap;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
 
 .column {
