--- a/FE/src/components/Search-bar/Search-bar.module.css
+++ b/FE/src/components/Search-bar/Search-bar.module.css
@@ -118,3 +118,32 @@
     justify-content: space-between;
     flex: 1;
 }
+
+.fragment {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    margin-top: 72px;
+}
+
+.search-results {
+    background-color: #fff;
+    padding: 5px 0;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border-radius: 6px;
+    margin-top: 0px;
+    max-width: 236px;
+}
+
+.search-item-wrapper {
+    width: 100%;
+    height: 100%;
+    padding: 10px 20px;
+}
+
+.search-item-wrapper:hover {
+    background-color: #dddddd;
+}
