--- a/FE/src/components/Search-bar/Search-bar.module.css
+++ b/FE/src/components/Search-bar/Search-bar.module.css
@@ -53,6 +53,7 @@
 
 .search-field {
     min-width: 800px;
+    min-height: 70px;
     margin-right: 40px;
     padding-left: 20px;
     background-color: var(--white);
@@ -129,13 +130,15 @@
 .search-results {
     background-color: #fff;
     padding: 5px 0;
-    z-index: 1;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     gap: 20px;
     border-radius: 6px;
     margin-top: 0px;
     max-width: 236px;
+    min-height: 400px;
+    overflow-y: scroll;
 }
 
 .search-item-wrapper {
