--- a/FE/src/pages/HostSite/AddRooms1/AddRooms1.module.css
+++ b/FE/src/pages/HostSite/AddRooms1/AddRooms1.module.css
@@ -127,7 +127,7 @@
     flex: 1;
     text-align: center;
 }
-
+/* 
 .input {
     width: 80%;
     border: none;
@@ -136,7 +136,7 @@
     text-align: center;
     font-size: 21px;
     font-weight: 500;
-}
+} */
 
 /* add 4 */
 .add4-content-container {
@@ -154,12 +154,20 @@
 
 /* input */
 .name {
-
     text-align: start !important;
     justify-self: flex-start !important;
     align-self: flex-start !important;
     margin-left: 90px;
     width: 700px;
+    height: 46px;
+    border: 1px solid #C2c6cc;
+    border-radius: 8px;
+    margin-top: 5px;
+    padding: 15px;
+}
+
+.number {
+    width: 200px;
     height: 46px;
     border: 1px solid #C2c6cc;
     border-radius: 8px;
