--- a/FE/src/pages/HostSite/AddRooms1/AddRooms1.module.css
+++ b/FE/src/pages/HostSite/AddRooms1/AddRooms1.module.css
@@ -150,16 +150,14 @@
 
 /* input */
 .name {
-    text-align: start !important;
-    justify-self: flex-start !important;
-    align-self: flex-start !important;
-    margin-left: 90px;
-    width: 700px;
-    height: 100px;
-    border: 1px solid #c2c6cc;
-    border-radius: 8px;
+    
+    width: 600px;
+    height: 48px;
+    /* border: 1px solid #c2c6cc;
+    border-radius: 8px; */
+    font-size: 40px;
     margin-top: 5px;
-    padding: 15px;
+    padding: 10px 20px;
 }
 
 .number {
