--- a/FE/src/components/Button/Button.module.css
+++ b/FE/src/components/Button/Button.module.css
@@ -102,7 +102,6 @@
 
 .fourth {
     width: 40%;
-    background-color: #9a9a9a;
     padding: 20px 0;
     border-radius: 35px;
     font-size: 15px;
@@ -145,4 +144,7 @@
     border-radius: 6px;
 }
 
+.bgGray {
+    background-color: #9a9a9a;
 
+}
