--- a/FE/src/components/ReservationItem/ReservationItem.module.css
+++ b/FE/src/components/ReservationItem/ReservationItem.module.css
@@ -22,23 +22,18 @@
 }
 
 .item-information {
+    min-height: 100px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    justify-content: space-around;
 }
 
-.item-name-wrapper {
-    position: relative;
+.top-information {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.item-name-wrapper::after {
-    position: absolute;
-    content: "";
-    height: 1px;
-    bottom: -10px;
-    width: 100%;
-    background-color: #e0e2e6;
-}
 
 .item-name {
     font-size: 16px;
@@ -46,9 +41,21 @@
 }
 
 .item-location {
+    position: relative;
+
     font-size: 14px;
     font-weight: 500;
     color: #9a9a9a;
+}
+
+.item-location::after {
+    position: absolute;
+    content: "";
+    height: 1px;
+    bottom: -5px;
+    left: 0;
+    width: 100%;
+    background-color: #e0e2e6;
 }
 
 .select-container {
@@ -70,6 +77,21 @@
 }
 
 .total-room {
+    display: flex;
+    gap: 10px;
+}
+
+.type-information {
+    display: flex;
+    gap: 20px;
+}
+
+.icon {
+    width: 20px;
+    height: 20px;
+}
+
+.total-container {
     display: flex;
     gap: 10px;
 }
