--- a/FE/src/module/modal/Modal.module.css
+++ b/FE/src/module/modal/Modal.module.css
@@ -1,17 +1,29 @@
+
 .modal {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.4);
+    z-index: 999;
+}
+
+.modal-content {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 20px;
-    position: fixed;
-    top: 50vh;
-    left: 50%;
-    transform: translate(-50%,-50%);
     width: 90%;
     height: 90vh;
-    background-color: #fff;
+    gap: 20px;
     padding: 10px 30px 30px 30px;
-    z-index: 20;
+    background-color: #fff;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+
 }
 
 .close-icon {
@@ -53,4 +65,16 @@
     gap: 10px;
     align-self: end;
     margin-top: auto
+}
+
+.on {
+    color: yellow;
+  }
+
+.off {
+    color: #ccc;
+  }
+
+.hidden {
+    display: none;
 }
