--- a/FE/src/components/Search-bar/Search-bar.module.css
+++ b/FE/src/components/Search-bar/Search-bar.module.css
@@ -137,13 +137,13 @@
     border-radius: 6px;
     margin-top: 0px;
     max-width: 236px;
-    min-height: 400px;
+    min-height: 200px;
     overflow-y: scroll;
 }
 
 .search-item-wrapper {
     width: 100%;
-    height: 100%;
+    height: 50px;
     padding: 10px 20px;
 }
 
