--- a/FE/src/module/modal/Modal.module.css
+++ b/FE/src/module/modal/Modal.module.css
@@ -68,7 +68,7 @@
 }
 
 .on {
-    color: yellow;
+    color: #f5de0f;
   }
 
 .off {
@@ -77,4 +77,11 @@
 
 .hidden {
     display: none;
+}
+
+.text-area {
+    width: 100%;
+    height: 150px;
+    padding: 12px;
+    border: 1px solid #333;
 }
