--- a/FE/src/components/FormikSignUp/FormikSignUp.module.css
+++ b/FE/src/components/FormikSignUp/FormikSignUp.module.css
@@ -11,6 +11,19 @@
     border-radius: 5px;
 }
 
+.sign-up2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    height: 70vh;
+    width: 30%;
+    gap: 20px;
+    background-color: #36393f;
+    border-radius: 5px;
+}
+
 .sign-up__form {
     display: flex;
     flex-direction: column;
@@ -20,6 +33,9 @@
     width: 100%;
     align-items: center;
 }
+
+
+
 
 .wrapper {
     display: flex;
