--- a/FE/src/module/table/table.module.css
+++ b/FE/src/module/table/table.module.css
@@ -43,7 +43,7 @@
 
 .table td {
     border-bottom: none;
-    padding: 10px 0;
+    padding: 10px 10px 10px 0;
 }
 
 .contact {
@@ -62,3 +62,5 @@
     font-size: 14px;
     font-weight: 600;
 }
+
+
