--- a/FE/src/pages/customer/Account/Account.module.css
+++ b/FE/src/pages/customer/Account/Account.module.css
@@ -64,6 +64,10 @@
 
 .email-status,
 .mobile-status {
+    display: flex; 
+    flex-direction: row;
+    align-items: center;
+    gap: 6px;
     font-size: 15px;
     font-weight: 500;
     color: #9a9a9a;
