--- a/FE/src/components/Search-bar/Search-bar.module.css
+++ b/FE/src/components/Search-bar/Search-bar.module.css
@@ -6,6 +6,8 @@
     background-color: #d9d9d9;
     margin-top: 20px;
     margin-bottom: 30px;
+    position: relative;
+    z-index: 99;
 }
 
 .find {
