--- a/FE/src/components/SelectFormik/SelectFormik.module.css
+++ b/FE/src/components/SelectFormik/SelectFormik.module.css
@@ -3,25 +3,28 @@
 .select_type {
     display: flex;
     cursor: pointer;
-    background: #C2c6cc;
-    min-width: 350px;
     height: 60px;
     border-radius: 6px;
     overflow: hidden;
     align-items: center;
+    width: 100%;
 }
 
 .select {
-    width: 100%;
     border: none;
     height: 80px;
     background-color: #EFF0F2;
     text-align: center;
-    font-size: 21px;
+    font-size: 18px;
     font-weight: 500;
+    border-radius: 6px;
+    min-width: 200px
 }
 
 .select_name {
-    padding: 20px;
+    padding: 20px 10px 20px 10px;
     width: 100px;
+    text-align: center;
+    background: #C2c6cc;
+
 }
