--- a/FE/src/module/hotel/form.module.css
+++ b/FE/src/module/hotel/form.module.css
@@ -92,6 +92,7 @@
 }
 
 .location-input {
+    width: 86%;
     display: flex;
     justify-content: space-between;
 }
@@ -106,6 +107,8 @@
     width: 100%;
     height: 200px;
     padding: 40px;
+    border: 1px solid #333;
+
 }
 
 .save {
