--- a/FE/src/module/modal/Modal.module.css
+++ b/FE/src/module/modal/Modal.module.css
@@ -51,8 +51,11 @@
 }
 
 .rating-wrapper {
+    min-height: 80px;
     display: flex;
+    align-items: center;
     gap: 10px;
+    font-size: 24px;
 }
 
 .star-icon {
@@ -81,7 +84,7 @@
 
 .text-area {
     width: 100%;
-    height: 150px;
+    height: 100px;
     padding: 12px;
     border: 1px solid #333;
 }
