--- a/FE/src/module/modal/Modal.module.css
+++ b/FE/src/module/modal/Modal.module.css
@@ -1,90 +1,89 @@
-
 .modal {
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0,0,0,0.4);
-    z-index: 999;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 999;
 }
 
 .modal-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 90%;
-    height: 90vh;
-    gap: 20px;
-    padding: 10px 30px 30px 30px;
-    background-color: #fff;
-    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 70%;
+  height: 90vh;
+  gap: 20px;
+  padding: 10px 30px 30px 30px;
+  background-color: #fff;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 
 .close-icon {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
 
 .top-wrapper {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .img {
-    width: 100px;
-    height: 120px;
+  width: 100px;
+  height: 120px;
 }
 
 .hotel-information__container {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .hotel-name {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .rating-wrapper {
-    min-height: 80px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-size: 24px;
+  min-height: 80px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 24px;
 }
 
 .star-icon {
-    width: 20px;
-    height: 20px;
+  width: 20px;
+  height: 20px;
 }
 
 .button-wrapper {
-    display: flex;
-    gap: 10px;
-    align-self: end;
-    margin-top: auto
+  display: flex;
+  gap: 10px;
+  align-self: end;
+  margin-top: auto;
 }
 
 .on {
-    color: #f5de0f;
-  }
+  color: #f5de0f;
+}
 
 .off {
-    color: #ccc;
-  }
+  color: #ccc;
+}
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .text-area {
-    width: 100%;
-    height: 100px;
-    padding: 12px;
-    border: 1px solid #333;
+  width: 100%;
+  height: 100px;
+  padding: 12px;
+  border: 1px solid #333;
 }
