--- a/FE/src/pages/customer/ReservationStatus/ReservationStatus.module.css
+++ b/FE/src/pages/customer/ReservationStatus/ReservationStatus.module.css
@@ -1,69 +1,73 @@
 .reservation-container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    margin: 30px 80px;
-    gap: 40px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin: 30px 80px;
+  gap: 40px;
 }
 
-
 .top-title {
-    font-size: 38px;
-    font-weight: 800;
+  font-size: 38px;
+  font-weight: 800;
 }
 
 .history {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .history::after {
-    content: "";
-    position: absolute;
-    bottom: -12px;
-    width: 100%;
-    height: 1px;
-    background-color: #e8eaec;
+  content: "";
+  position: absolute;
+  bottom: -12px;
+  width: 100%;
+  height: 1px;
+  background-color: #e8eaec;
 }
 
 .history-wrapper {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
-
 .history-title {
-    width: 90px;
-    font-size: 18px;
-    font-weight: 700;
-    width: 90px;
-    text-align: center;
+  width: 90px;
+  font-size: 18px;
+  font-weight: 700;
+  width: 90px;
+  text-align: center;
 }
 
 .tab-active {
-    position: relative;
+  position: relative;
 }
 
 .tab-active::before {
-    content: "";
-    position: absolute;
-    bottom: -12px;
-    width: 100%;
-    height: 4px;
-    left: 0;
-    background-color: #484848;
+  content: "";
+  position: absolute;
+  bottom: -12px;
+  width: 100%;
+  height: 4px;
+  left: 0;
+  background-color: #484848;
 }
 
 .search-wrapper {
-    display: flex;
-    gap: 5px;
-    margin-right: 50px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-right: 50px;
 }
 
 .status {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.search {
+  min-width: 100px;
+  padding: 10px 20px;
 }
