--- a/FE/src/module/modal/Modal.module.css
+++ b/FE/src/module/modal/Modal.module.css
@@ -1,4 +1,3 @@
-
 .modal {
     position: fixed;
     display: flex;
@@ -6,10 +5,10 @@
     align-items: center;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100vh;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
     z-index: 999;
 }
 
@@ -23,7 +22,6 @@
     padding: 10px 30px 30px 30px;
     background-color: #fff;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-
 }
 
 .close-icon {
@@ -51,32 +49,33 @@
 }
 
 .rating-wrapper {
-    min-height: 80px;
+    min-height: 45px;
     display: flex;
     align-items: center;
     gap: 10px;
-    font-size: 24px;
+    font-size: 20px;
+    min-width: 250px;
 }
 
 .star-icon {
-    width: 20px;
-    height: 20px;
+    width: 31px;
+    height: 25px;
 }
 
 .button-wrapper {
     display: flex;
     gap: 10px;
     align-self: end;
-    margin-top: auto
+    margin-top: auto;
 }
 
 .on {
     color: #f5de0f;
-  }
+}
 
 .off {
     color: #ccc;
-  }
+}
 
 .hidden {
     display: none;
