--- a/FE/src/components/HistoryItem/HistoryItem.module.css
+++ b/FE/src/components/HistoryItem/HistoryItem.module.css
@@ -1,86 +1,82 @@
 .item-container {
-    display: flex;
-    justify-content: space-between;
-    height: 100px;
-
+  display: flex;
+  justify-content: space-between;
+  height: 100px;
 }
 
 .col-left {
-    display: flex;
-    gap: 20px;
-    height: 100%;
+  display: flex;
+  flex: 1;
+  gap: 20px;
+  height: 100%;
+  cursor: pointer;
 }
 
 .img-container {
-    width: 100px;
-    height: 100%;
+  width: 100px;
+  height: 100%;
 }
 
 .image {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
-.item-information { 
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    height: 100%;
+.item-information {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: 100%;
 }
 
 .item-title {
-    font-size: 16px;
-    font-weight: 700;
-    color: #484848
+  font-size: 16px;
+  font-weight: 700;
+  color: #484848;
 }
 
 .item-specific {
-    display: flex;
-    gap: 40px;
+  display: flex;
+  gap: 40px;
 }
 
 .specific {
-    color: #484848;
-    font-size: 13px;
-    font-weight: 600;
+  color: #484848;
+  font-size: 13px;
+  font-weight: 600;
 }
 
 .time {
-    color: #9a9a9a;
-    font-weight: 500;
+  color: #9a9a9a;
+  font-weight: 500;
 }
 
 .item-price {
-    font-size: 16px;
-    font-weight: 600;
-
+  font-size: 16px;
+  font-weight: 600;
 }
 
 .col-right {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .button-container {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
-
-
 .review {
-    background-color: #EFF0F2;
-    transition: ease-in 0.2s;
+  background-color: #eff0f2;
+  transition: ease-in 0.2s;
 }
 
 .review:hover {
-    background-color: #11CC2F;
-    
+  background-color: #11cc2f;
 }
 
 .button-wrapper {
-    display: flex;
-    gap: 50px;
-    flex-direction: row-reverse;
+  display: flex;
+  gap: 50px;
+  flex-direction: row-reverse;
 }
-
