--- a/FE/src/pages/customer/Home-Booking/Home-booking.module.css
+++ b/FE/src/pages/customer/Home-Booking/Home-booking.module.css
@@ -1,88 +1,88 @@
 .doawnload-section {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 80px 80px 80px;
-    background-color: #E8EAEC;
-    padding: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 80px 80px 80px;
+  background-color: #e8eaec;
+  padding: 50px;
+  border-radius: 4px;
 }
 
 .doawnload-container {
-    display: flex;
-    gap: 30px;
-    flex-direction: column;
+  display: flex;
+  gap: 30px;
+  flex-direction: column;
 }
 
 .button-container {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .icon-download {
-    font-size: 200px;
+  font-size: 200px;
 }
 
-
 .about__img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .newsletter {
-    height: 117px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color:  #E8EAEC;
-    margin-bottom: -58px;
+  height: 117px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #e8eaec;
+  margin-bottom: -58px;
 }
 
 .newsletter__title {
-    font-size: 18px;
-    font-weight: 700;
+  font-size: 18px;
+  font-weight: 700;
 }
 
 .newsletter__desc {
-    font-size: 15px;
-    font-weight: 500;
+  font-size: 15px;
+  font-weight: 500;
 }
 
 .input-container {
-    position: relative;
-    width: 800px;
-    height: 52px;
+  position: relative;
+  width: 800px;
+  height: 52px;
 }
 
 .input-field {
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    border-radius: 26px;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  border-radius: 26px;
 }
 
 .send__container {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    height: 100%;
-    width: 52px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #9A9A9A;
-    border-radius: 50px;
-    font-size: 20px;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  height: 100%;
+  width: 52px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #9a9a9a;
+  border-radius: 50px;
+  font-size: 20px;
 }
 
 .icon-font {
-    /* font-size: 22px; */
+  /* font-size: 22px; */
 }
 
 .home-booking__body {
-    margin: 0 50px;
+  margin: 0 50px;
 }
 
 .hotel-5 {
-    margin-bottom: 100px;
+  margin-bottom: 100px;
 }
