--- a/FE/src/pages/HostSite/HostPage/HostPage.module.css
+++ b/FE/src/pages/HostSite/HostPage/HostPage.module.css
@@ -3,15 +3,19 @@
 }
 
 .banner {
+    display: flex;
+    flex-direction: column;
+    justify-items: space-around;
+    gap: 20px;
     position: relative;
     min-height: 306px;
-    background-color: #EFF0F2;
-    padding: 0 0 52px 82px;
+    background-color: #eff0f2;
+    padding: 0 82px 52px 82px;
 }
 
 .banner-wrapper {
-    position: absolute;
-    bottom: 133px;
+    /* position: absolute;
+    bottom: 133px; */
 }
 
 .banner-heading {
@@ -25,11 +29,12 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
+    padding-right: 60px;
 }
 
 .banner-button {
-    position: absolute;
-    bottom: 52px;
+    /* position: absolute;
+    bottom: 52px; */
     width: 200px;
 }
 
@@ -72,5 +77,5 @@
     position: relative;
     margin-bottom: 30px;
     width: 100%;
-    height:100%;
+    height: 100%;
 }
